k8s/deployment-junhash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polkdot-phala-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polkdot-phala-node
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: polkdot-phala-node
    spec:
      containers:
      - name: polkdot-phala-node
        image: "phalanetwork/phala-poc3-node"
        imagePullPolicy: Always
        ports:
        - name: p2p
          containerPort: 9933
        - name: rpc
          containerPort: 9944
        volumeMounts:
        - mountPath: /root/data/
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: validator-claim
