k8s/deployment-validator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: YOUR_NODE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: YOUR_NODE_NAME
      type: validator
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: YOUR_NODE_NAME
        type: validator
    spec:
      containers:
      - name: polkdot-phala-node
        image: "phalanetwork/phala-poc3-node"
        imagePullPolicy: Always
        command:
          - ./phala-node
          - --chain=phala
          - --base-path
          - /root/data
          - --database=paritydb
          - --name
          - $(NODE_NAME)
          - --pruning=archive
          - --rpc-port=9933
          - --ws-port=9944
          - --prometheus-external
          - --out-peers=0
          - --reserved-only
          - --reserved-nodes
          - /ip4/YOUR_FULL_NODE_IP/tcp/30333/p2p/YOUR_PEER_ID
        ports:
        - name: p2p-port
          containerPort: 9933
        - name: rpc-port
          containerPort: 9944
        - name: mon-port
          containerPort: 9615
        volumeMounts:
        - mountPath: /root/data/
          name: data
      - name: polkdot-rpc
        image: "gcr.io/g-hash-community/polkadot-rpc-client:v0.1"
        imagePullPolicy: Always
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "/usr/local/bin/node /workspace/getInfo.js; while true; do sleep 10; done" ]
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: YOUR_NODE_NAME-claim
