k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: YOUR_NODE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: YOUR_NODE_NAME
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: YOUR_NODE_NAME
    spec:
      containers:
      - name: polkdot-phala-node
        image: "phalanetwork/phala-poc3-node"
        imagePullPolicy: Always
        ports:
        - name: p2p-port
          containerPort: 9933
        - name: rpc-port
          containerPort: 9944
        volumeMounts:
        - mountPath: /root/data/
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: YOUR_NODE_NAME-claim
